updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello my name is Eden.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Oaxaca, which is a southern area of Mexico, and later moved to Seattle around the age of 6</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p> I like taking photos with film cameras that I find at thrift stores, and exploring the town to find new developments or interesting places to explore</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Ideally I would love to work to create visual mixed media, with a great snack selection</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Seattle, really close to the Seattle center</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have wanted to do this ever since I got to give it a go last year for the first time, and since then have wanted to know more!</p>
     </section>
 
     <footer id="footer">
